--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^15.0.2"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
