--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-react": "^3.1.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
+    "gulp-webserver": "^0.9.1",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
